--- a/CA.WebAPI/appsettings.Development.json
+++ b/CA.WebAPI/appsettings.Development.json
@@ -8,5 +8,12 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=DemoDb;User Id=sa;Password=sa123456;TrustServerCertificate=true;",
     "Redis": "localhost:6379,abortConnect=false,ssl=false"
+  },
+  "SmtpSettings": {
+    "Host": "smtp.gmail.com",
+    "Port": 587,
+    "FromAddress": "vietdung299@gmail.com",
+    "Password": "kwmb juam cwbb unpg",
+    "EnableSsl": "true"
   }
 }
