--- a/CA.Infrastructure.EmailService/CA.Infrastructure.EmailService.csproj
+++ b/CA.Infrastructure.EmailService/CA.Infrastructure.EmailService.csproj
@@ -9,18 +9,13 @@
     <ItemGroup>
       <PackageReference Include="Handlebars.Net" Version="2.1.6" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.2" />
+        <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.1" />
     </ItemGroup>
 
     <ItemGroup>
       <None Update="Templates\password-reset.html">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
-    </ItemGroup>
-
-    <ItemGroup>
-      <Reference Include="Microsoft.Extensions.Configuration.Abstractions">
-        <HintPath>..\..\..\..\..\usr\local\share\dotnet\x64\shared\Microsoft.AspNetCore.App\8.0.1\Microsoft.Extensions.Configuration.Abstractions.dll</HintPath>
-      </Reference>
     </ItemGroup>
 
 </Project>
